// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessages > renders with assistant correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <div class="inline-flex items-center justify-center min-h-6"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><span class="iconify i-lucide:bot text-muted shrink-0" aria-hidden="true"></span></span></div>
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with class correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height) max-w-3xl" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with compact correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-3">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-1.5 pb-3">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-2 py-1 rounded-lg min-h-8">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-3">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-1.5 pb-3">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with content slot correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Content slot</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">Content slot</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with default slot correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">Default slot
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with indicator slot correctly 1`] = `
"<div data-status="submitted" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">Indicator slot</div>
      <!--v-if-->
    </div>
  </article>
  <!---->
</div>"
`;

exports[`ChatMessages > renders with messages correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status error correctly 1`] = `
"<div data-status="error" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status ready correctly 1`] = `
"<div data-status="ready" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status streaming correctly 1`] = `
"<div data-status="streaming" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status submitted correctly 1`] = `
"<div data-status="submitted" class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">
        <div class="h-6 flex items-center gap-1 py-3 *:size-2 *:rounded-full *:bg-elevated [&amp;>*:nth-child(1)]:animate-[bounce_1s_infinite] [&amp;>*:nth-child(2)]:animate-[bounce_1s_0.15s_infinite] [&amp;>*:nth-child(3)]:animate-[bounce_1s_0.3s_infinite]"><span></span><span></span><span></span></div>
      </div>
      <!--v-if-->
    </div>
  </article>
  <!---->
</div>"
`;

exports[`ChatMessages > renders with ui correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with user correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <div class="inline-flex items-center justify-center min-h-6 mt-2"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img src="https://github.com/benjamincanac.png" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span></div>
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with viewport slot correctly 1`] = `
"<div class="w-full flex flex-col gap-1 flex-1 px-2.5 [&amp;>article]:last-of-type:min-h-(--last-message-height)" style="--last-message-height: 0px;">
  <article data-role="user" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] ltr:justify-end ms-auto gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
    <div class="relative flex items-start group-data-[role=user]/message:max-w-[75%] rtl:justify-end gap-3 pb-8">
      <!--v-if-->
      <div class="relative text-pretty min-w-0">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;
